--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^1.0.2",
+        "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-vue": "^4.0.0",
-        "vue": "^3.2.47"
+        "vue": "^3.2.47",
+        "ziggy": "^2.4.0"
     }
 }
