--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "html2pdf.js": "^0.10.1",
         "vue": "^3.2.47",
         "vue-router": "^4.1.6",
+        "vue3-toastify": "^0.2.1",
         "ziggy": "^2.4.0"
     }
 }
